css/styles.css
body {
	background: linear-gradient(to bottom, #0d1b2a, #1e3c72, #2a5298, #3867b9);
	max-width: 1700px;
	margin: auto;
	background: url("../img/background.jpg");
	background-size: cover;
	word-wrap: break-word;
}

h1 {
	color: white;
	font-size: 3em;
}

header {
	margin: auto;
	text-align: center;
}

#initial-message {
	max-width: 950px;
	visibility: hidden;
	text-align: left;
	padding: 0.5em 1em;
	color: white;
	margin: auto;
	font-size: 1.25em;
}

#initial-message ul,
#initial-message ol {
	line-height: 1.5em;
}

#initial-message a {
	color: white;
}

main {
	text-align: center;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	gap: 1.25em;
	margin: auto;
	margin-top: 2em;
	padding: 0 50px;
}

section.day {
	width: 150px;
	height: 150px;
	border-radius: 15px;
	background-color: rgba(255, 255, 255, 0.25);
	cursor: pointer;
}

.day img {
	width: 75px;
	height: 75px;
	object-fit: contain;
}
.day.hasTitle.pastDate img {
	height: 50px;
}

.dayContent img {
	width: initial !important;
	height: initial !important;
	max-width: 100%;
	max-height: fit-content !important;
}

h1,
h2 {
	margin: 0.5em;
}

h2 {
	margin-bottom: 0;
}

h2 + p img:nth-of-type(2) {
	display: none;
}
.futureDate h2 span,
.currentDate h2 span {
	display: none;
}
.hasTitle.pastDate h2 span {
	display: block;
	font-size: 0.5em !important;
	height: 20px;
	margin-top: 5px;
}

section.day:not(.active):hover {
	background-color: #999;
	transform: translateY(-0.5rem);
	transition:
		transform 150ms ease-out,
		box-shadow 150ms ease-out;
}

section.day.active {
	background-color: #444;
}

section.pastDate {
	background: #064cff3d;
}
section.currentDate {
	background: #34bb3570 !important;
}
section.pastDate > h2 {
	color: white;
}

section.dayContent {
	display: none;
}

section.dayContent {
	background: #fff;
	border-radius: 8px;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
	display: none;
	font-size: 2em;
	max-height: 80vh;
	overflow-y: auto;
	padding: 20px;
	position: fixed;
	width: 60%;
	z-index: 1;
	top: 0;
	height: 80%;
	transform: translate(0%, -25%);
	text-align: left;
	max-width: 900px;
	left: 0;
	right: 0;
	margin: 5% auto;
}

section.day.active .dayContent {
	animation: fadeIn 0.5s ease-out forwards;
}
@keyframes fadeIn {
	from {
		opacity: 0;
		transform: translate(0%, -25%);
	}
	to {
		opacity: 1;
		transform: translate(0%, 0%);
	}
}

.closeButton {
	background: #3498db;
	color: #fff;
	padding: 5px 10px;
	border: none;
	border-radius: 4px;
	cursor: pointer;
	font-size: 10px;
	margin-top: -20px;
	font-weight: bold;
	float: right;
}

footer {
	width: 60%;
	max-width: 600px;
	margin: auto;
	font-size: 0.9em;
	text-align: center;
	margin-top: 3em;
	border-top: 1px solid #bbb;
	padding-top: 1em;
	color: white;
	margin-bottom: 1em;
}

footer a {
	color: white;
}

.admonition {
	--info-icon: "📝";
	--info-color-border: #0063cb;
	--info-color-bg: rgb(1 125 255 / 25%);
	--info-color-title: #cae3ff;
	--success-icon: "🌱";
	--success-color-border: #18753c;
	--success-color-bg: rgb(0 200 83 / 25%);
	--success-color-title: #c3f8d3;
	--warning-icon: "❗";
	--warning-color-border: #d93025;
	--warning-color-bg: rgb(255 0 0 / 25%);
	--warning-color-title: #ffc8c8;
	margin: 1.5em 0em;
	padding: 0.75em 1em;
	border-radius: 0.25em;
	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
	background-color: rgba(85, 85, 85, 0.25);
	font-size: 0.9em;
	backdrop-filter: brightness(0.5);
}

@media screen and (min-width: 500px) {
	.admonition {
		margin-left: 1em;
		font-size: 0.95em;
	}
}

.admonitionTitle {
	font-weight: bold;
	letter-spacing: 0.02em;
}

.admonitionContent {
	margin-top: 1em;
}

.admonitionTitle:before {
	font-weight: 300;
	margin-right: 0.75em;
	font-size: 1.15em;
}

.admonitionTitle:empty {
	display: none;
}

.info .admonitionTitle:before,
.note .admonitionTitle:before,
.spoiler .admonitionTitle:before {
	content: var(--info-icon);
}
.warning .admonitionTitle:before,
.danger .admonitionTitle:before,
.bug .admonitionTitle:before {
	content: var(--warning-icon);
}

.tip .admonitionTitle:before,
.success .admonitionTitle:before {
	content: var(--success-icon);
}

.admonition.info,
.admonition.note,
.admonition.spoiler {
	border-color: var(--info-color-border);
	background: var(--info-color-bg);
}

.admonition.info .admonitionTitle,
.admonition.note .admonitionTitle,
.admonition.spoiler .admonitionTitle {
	color: var(--info-color-title);
}

.admonition.success,
.admonition.tip {
	border-color: var(--success-color-border);
	background: var(--success-color-bg);
}

.admonition.success .admonitionTitle,
.admonition.tip .admonitionTitle {
	color: var(--success-color-title);
}

.admonition.bug,
.admonition.danger,
.admonition.warning {
	border-color: var(--warning-color-border);
	background: var(--warning-color-bg);
}

.admonition.bug .admonitionTitle,
.admonition.danger .admonitionTitle,
.admonition.warning .admonitionTitle {
	color: var(--warning-color-title);
}

iframe {
	max-width: 100%;
}

@media screen and (max-width: 500px) {
	body {
		background-size: auto;
	}
	main {
		margin-top: 1.5em;
		padding: 10px;
	}
	h1 {
		font-size: 2.75em;
	}
	#initial-message {
		font-size: 1.4em !important;
	}
	footer {
		font-size: 1.4em !important;
		line-height: 1.75em;
	}
	footer a {
		display: inline-block;
	}
	.day {
		width: 200px !important;
		height: 200px !important;
		margin: 30px 20%;
	}
	.day h2 {
		font-size: 1.75em !important;
	}
	.day img {
		width: 110px;
		height: 120px !important;
		object-fit: contain;
	}
	.day.hasTitle.pastDate img {
		height: 90px !important;
		width: 100px !important;
	}
	.day.hasTitle.pastDate .dayContent img,
	.dayContent img {
		width: initial !important;
		height: initial !important;
	}
	.dayContent {
		width: 75% !important;
		margin: 5% !important;
		font-size: 1.5em !important;
	}
	.active .dayContent {
		display: block !important;
	}
}

/* Ajout d'une animation de neige */
@keyframes snow {
	0% {
		transform: translateY(0);
		opacity: 1;
	}
	100% {
		opacity: 0.5;
		transform: translateY(100vh);
	}
}

.snow-container {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100vh;
	pointer-events: none;
	z-index: 10;
	overflow: hidden;
}

.snowflake {
	position: absolute;
	top: -40px;
	left: 5%;
	color: #fff;
	font-size: 1rem;
	opacity: 0.8;
	animation: snow 10s linear infinite;
}

.snowflake:nth-child(1) {
	left: 10%;
	font-size: 1.5rem;
	animation-duration: 12s;
	animation-delay: 0s;
}

.snowflake:nth-child(2) {
	left: 30%;
	font-size: 1rem;
	animation-duration: 8s;
	animation-delay: 2s;
}

.snowflake:nth-child(3) {
	left: 50%;
	font-size: 2rem;
	animation-duration: 10s;
	animation-delay: 3s;
}

.snowflake:nth-child(4) {
	left: 70%;
	font-size: 1.2rem;
	animation-duration: 14s;
	animation-delay: 5s;
}

.snowflake:nth-child(5) {
	left: 90%;
	font-size: 1.8rem;
	animation-duration: 9s;
	animation-delay: 6s;
}

.currentDate.bounce {
	animation: bounce 1.5s infinite;
}

/* Animation bondissante plus prononcée */
@keyframes bounce {
	0%,
	20%,
	50%,
	80%,
	100% {
		transform: translateY(0); /* Position de repos */
	}
	40% {
		transform: translateY(-20px); /* Saut plus haut */
	}
	60% {
		transform: translateY(-10px); /* Rebond plus marqué */
	}
}

/* The switch */
.switch {
	position: absolute;
	top: 10px;
	right: 10px;
	display: inline-block;
	width: 60px;
	height: 34px;
}
.switch input {
	opacity: 0;
	width: 0;
	height: 0;
}
.slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: #ccc;
	-webkit-transition: 0.4s;
	transition: 0.4s;
}
.slider:before {
	position: absolute;
	content: "";
	height: 26px;
	width: 26px;
	left: 4px;
	bottom: 4px;
	background-color: white;
	-webkit-transition: 0.4s;
	transition: 0.4s;
}
input:checked + .slider {
	background-color: #2196f3;
}
input:focus + .slider {
	box-shadow: 0 0 1px #2196f3;
}
input:checked + .slider:before {
	-webkit-transform: translateX(26px);
	-ms-transform: translateX(26px);
	transform: translateX(26px);
}
.slider.round {
	border-radius: 34px;
}
.slider.round:before {
	border-radius: 50%;
}

